--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,3 +5,9 @@ services:
   build:
      context: ./
      dockerfile: Dockerfile
+  healthcheck:
+   test: ["CMD", "curl", "-f", "http://mastodon.world"]
+   interval: 1000s
+   timeout: 10s
+   retries: 3
+   start_period: 20s
