--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,9 +3,5 @@ services:
   env_file: .env
   restart: always
   image: ghcr.io/errorcodezero/mastodon-plays-snake-rs
-  healthcheck:
-   test: ["CMD", "curl", "-f", "http://mastodon.world"]
-   interval: 1000s
-   timeout: 10s
-   retries: 3
-   start_period: 20s
+  ports:
+    - 8080:8080
